fix - overflow onload

--- a/src/app/shared/layouts/authenticated-layout.component.scss
+++ b/src/app/shared/layouts/authenticated-layout.component.scss
@@ -16,10 +16,6 @@ md-sidenav{
     background-color: $zp-white !important;
   }
 }
-.md-sidenav-content{
-  overflow: hidden !important;
-  // background-color:rgba($background ,.87);
-}
 .zp-content {
   position: relative;
   display: block;
